# logging-lib

./: CMakeLists.txt  README.md
example/: main.cpp  optional.cpp
include/: logger.h
src/: file_logger.cpp
tests/: CMakeLists.txt  logger_test.cpp
